<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">hollow Launcher (Minecraft: Java Edition for Android)</string>
    <string name="app_short_name" translatable="false">hollowLauncher</string>
    <string name="login_online_username_hint" translatable="false">Username</string>
    <string name="login_online_login_label" translatable="false">Login</string>
    <string name="hint_control_mapping" translatable="false">"Touch the top center cogwheel to open the context menu ⚙\nTap a button to customize: edit, resize, remove, or change its keybinds."</string>
    <string name="warning_remove_account" translatable="false">This account will be removed!</string>
    <string name="alerttitle_installmod" translatable="false">Select a mod installer</string>
    <string name="error_fatal" translatable="false">hollow Launcher has unexpectedly crashed</string>
    <string name="error_no_version" translatable="false">No version!</string>
    <string name="error_show_more" translatable="false">Show more</string>
    <string name="error_show_less" translatable="false">Show less</string>
    <string name="toast_permission_denied" translatable="false">The read/write to storage permission is required!</string>
    <string name="toast_optifine_success" translatable="false">Install successful</string>
    <string name="mcl_tab_wiki" translatable="false">Wiki</string>
    <string name="mcl_launch_cleancache" translatable="false">Cleaning cache files</string>
    <string name="mcl_launch_downloading" translatable="false">Downloading %s</string>
    <string name="mcl_launch_downloading_progress" translatable="false">"Downloading %s (%.2f MB / %.2f MB)"</string>
    <string name="mcl_launch_download_assets" translatable="false">Preparing to download resources</string>
    <string name="mcl_options" translatable="false">Options</string>
    <string name="mcl_option_customcontrol" translatable="false">Custom controls</string>
    <string name="mcl_setting_title_use_surface_view" translatable="false">Use alternate surface rendering</string>
    <string name="mcl_setting_subtitle_use_surface_view" translatable="false">May help performance in GPU bound scenarios.</string>
    <string name="mcl_setting_title_ignore_notch" translatable="false">Ignore notch</string>
    <string name="mcl_setting_subtitle_ignore_notch" translatable="false">Ignores the notch and extends the screen under it.\nGives you a more immersive experience.</string>
    <string name="mcl_setting_title_resolution_scaler" translatable="false">Resolution Scaler</string>
    <string name="mcl_setting_subtitle_resolution_scaler" translatable="false">Allows you to decrease the game resolution. 100% is full resolution.</string>
    <string name="mcl_setting_title_longpresstrigger" translatable="false">Trigger long press delay</string>
    <string name="mcl_setting_subtitle_longpresstrigger" translatable="false">Change long press trigger delay for destroying blocks and dropping items.</string>
    <string name="mcl_setting_title_buttonscale" translatable="false">Control buttons scaling</string>
    <string name="mcl_setting_subtitle_buttonscale" translatable="false">Upscale them if the buttons are too small.</string>
    <string name="mcl_setting_title_mousescale" translatable="false">Mouse scaling</string>
    <string name="mcl_setting_subtitle_mousescale" translatable="false">Change the size of the virtual mouse.</string>
    <string name="mcl_setting_title_javaargs" translatable="false">JVM Launch arguments</string>
    <string name="mcl_setting_subtitle_javaargs" translatable="false">Be careful, this may make game crash if modified without knowledge.</string>
    <string name="mcl_setting_category_renderer" translatable="false">Renderer</string>
    <string name="mcl_setting_renderer_gles2_4" translatable="false">Holy GL4ES - (all versions, fast)</string>
    <string name="mcl_setting_renderer_vulkan_zink" translatable="false">Zink (Vulkan) - (all versions, mid)</string>
    <string name="mcl_setting_renderer_ltw" translatable="false">LTW (OpenGL ES 3) - 1.17+ only</string>
    <string name="mcl_setting_veroption_release" translatable="false">Release</string>
    <string name="mcl_setting_veroption_snapshot" translatable="false">Snapshot</string>
    <string name="mcl_setting_veroption_oldalpha" translatable="false">Old-alpha</string>
    <string name="mcl_setting_veroption_oldbeta" translatable="false">Old-beta</string>
    <string name="mcl_setting_java_sandbox" translatable="false">Sandbox .jar execution</string>
    <string name="mcl_setting_java_sandbox_subtitle" translatable="false">Control the availability of the sandbox security manager when executing a .jar file.</string>
    <string name="mcl_version_clone" translatable="false">Clone</string>
    <string name="global_edit" translatable="false">Edit</string>
    <string name="global_error" translatable="false">Error</string>
    <string name="global_load" translatable="false">Load</string>
    <string name="global_name" translatable="false">Name</string>
    <string name="global_remove" translatable="false">Remove</string>
    <string name="global_clone" translatable="false">Clone</string>
    <string name="global_restart" translatable="false">Restart</string>
    <string name="global_save" translatable="false">Save</string>
    <string name="global_unpacking" translatable="false">Unpacking %s</string>
    <string name="global_error_field_empty" translatable="false">This field can\'t be empty</string>
    <string name="global_waiting" translatable="false">Wait</string>
    <string name="global_select" translatable="false">Select</string>
    <string name="global_retry" translatable="false">Retry</string>
    <string name="global_default" translatable="false">Default</string>
    <string name="mcn_exit_title" translatable="false">Application/Game exited with code %d, check latestlog.txt for more details.</string>
    <string name="mcn_abort_title" translatable="false">Application/Game aborted, check latestlog.txt for more information</string>
    <string name="mcn_exit_confirm" translatable="false">Are you sure want to force close?</string>
    <string name="mcn_check_fail_vulkan_support" translatable="false">Zink (Vulkan) renderer is not supported on this device!</string>
    <string name="control_chat" translatable="false">Chat</string>
    <string name="control_debug" translatable="false">Debug</string>
    <string name="control_primary" translatable="false">Pri</string>
    <string name="control_secondary" translatable="false">Sec</string>
    <string name="control_shift" translatable="false">◇</string>
    <string name="control_inventory" translatable="false">Inv</string>
    <string name="control_up" translatable="false">▲</string>
    <string name="control_left" translatable="false">◀</string>
    <string name="control_right" translatable="false">▶</string>
    <string name="control_down" translatable="false">▼</string>
    <string name="control_jump" translatable="false">⬛</string>
    <string name="control_thirdperson" translatable="false">3rd</string>
    <string name="control_listplayers" translatable="false">Tab</string>
    <string name="control_mouse" translatable="false">Mouse</string>
    <string name="control_mouseoff" translatable="false">Mouse: off</string>
    <string name="control_mouseon" translatable="false">Mouse: on </string>
    <string name="control_forceclose" translatable="false">Force close</string>
    <string name="control_viewout" translatable="false">Log output</string>
    <string name="control_adebug" translatable="false">Input Debug</string>
    <string name="control_customkey" translatable="false">Send custom keycode</string>
    <string name="import_control_label" translatable="false">Import controls</string>
    <string name="import_control_invalid_file" translatable="false">Invalid or corrupted file</string>
    <string name="import_control_import_button" translatable="false">import controls</string>
    <string name="import_control_verifying_file" translatable="false">File is being verified, please wait and try again…</string>
    <string name="import_control_invalid_name" translatable="false">Invalid name or file already exists</string>
    <string name="import_control_done" translatable="false">Importation done</string>
    <string name="customctrl_toggle" translatable="false">Toggleable</string>
    <string name="customctrl_size" translatable="false">Size</string>
    <string name="customctrl_mapping" translatable="false">Mapping</string>
    <string name="customctrl_orientation" translatable="false">Orientation</string>
    <string name="customctrl_background_bitmap" translatable="false">Background image</string>
    <string name="customctrl_background_color" translatable="false">Background color</string>
    <string name="customctrl_background_color_warning" translatable="false">Changing background color will reset the background image</string>
    <string name="customctrl_corner_radius" translatable="false">Corner radius</string>
    <string name="customctrl_stroke_width" translatable="false">Stroke width</string>
    <string name="customctrl_stroke_color" translatable="false">Stroke color</string>
    <string name="customctrl_button_opacity" translatable="false">Button Opacity</string>
    <string name="customctrl_addbutton" translatable="false">Add button</string>
    <string name="customctrl_addbutton_drawer" translatable="false">Add button drawer</string>
    <string name="customctrl_addbutton_joystick" translatable="false">Add joystick</string>
    <string name="customctrl_addsubbutton" translatable="false">Add sub-button</string>
    <string name="customctrl_selectdefault" translatable="false">Select default controlmap</string>
    <string name="customctrl_export" translatable="false">Export controlmap</string>
    <string name="main_share_logs" translatable="false">Share log file</string>
    <string name="main_install_jar_file" translatable="false">Execute a .jar</string>
    <string name="main_play" translatable="false">Play</string>
    <string name="autoram_info_msg" translatable="false">Memory set to %d MB</string>
    <string name="mcl_setting_check_libraries" translatable="false">Check libraries after downloading</string>
    <string name="mcl_setting_check_libraries_subtitle" translatable="false">This option forces the launcher to check the library hash if it\'s available. Prevents broken downloads.</string>
    <string name="dl_library_sha_fail" translatable="false">Library %s is damaged and will be redownloaded</string>
    <string name="dl_library_sha_unknown" translatable="false">Library %s can\'t be checked, have to assume it\'s good</string>
    <string name="dl_library_sha_pass" translatable="false">Library %s is fine and usable</string>
    <string name="mcl_disable_gestures" translatable="false">Disable gestures</string>
    <string name="mcl_disable_gestures_subtitle" translatable="false">Disables gestures, such as hold to break block, and tap to place a block.</string>
    <string name="mcl_disable_swap_hand" translatable="false">Disable double tap to swap hands</string>
    <string name="mcl_disable_swap_hand_subtitle" translatable="false">Disables double tapping on the hotbar item to swap it in the second hand.</string>
    <string name="mcl_setting_title_mousespeed" translatable="false">Mouse Speed</string>
    <string name="log_view_button_scroll_off" translatable="false">Autoscroll\nOFF</string>
    <string name="log_view_button_scroll_on" translatable="false">Autoscroll\nON</string>
    <string name="log_view_button_output_off" translatable="false">Output\nOFF</string>
    <string name="log_view_button_output_on" translatable="false">Output\nON</string>
    <string name="log_view_label_log_output" translatable="false">Log output:</string>
</resources>