<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Top bar -->
    <View
        android:id="@+id/top_log_view"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#E4000000"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/log_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:text="@string/log_view_label_log_output"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/top_log_view"
        app:layout_constraintTop_toTopOf="@+id/top_log_view"
        app:layout_constraintBottom_toBottomOf="@+id/top_log_view" />

    <ToggleButton
        android:id="@+id/content_log_toggle_autoscroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/log_view_button_scroll_off"
        android:textOn="@string/log_view_button_scroll_on"
        android:textColor="#FFFFFF"
        android:background="?android:attr/selectableItemBackground"
        app:layout_constraintTop_toTopOf="@+id/top_log_view"
        app:layout_constraintBottom_toBottomOf="@+id/top_log_view"
        app:layout_constraintEnd_toStartOf="@+id/content_log_toggle_log"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"/>

    <ToggleButton
        android:id="@+id/content_log_toggle_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/log_view_button_output_off"
        android:textOn="@string/log_view_button_output_on"
        android:textColor="#FFFFFF"
        android:background="?android:attr/selectableItemBackground"
        app:layout_constraintTop_toTopOf="@+id/top_log_view"
        app:layout_constraintBottom_toBottomOf="@+id/top_log_view"
        app:layout_constraintEnd_toStartOf="@+id/log_view_cancel"
        android:layout_marginEnd="8dp"/>

    <Button
        android:id="@+id/log_view_cancel"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:text="close"
        android:textColor="#FFFFFF"
        android:background="?android:attr/selectableItemBackground"
        app:layout_constraintTop_toTopOf="@+id/top_log_view"
        app:layout_constraintBottom_toBottomOf="@+id/top_log_view"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"/>

    <!-- Log content scroll -->
    <com.kdt.DefocusableScrollView
        android:id="@+id/content_log_scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:alpha="0.9"
        android:background="#000000"
        app:layout_constraintTop_toBottomOf="@+id/top_log_view"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/content_log_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textIsSelectable="true"
            android:lineSpacingExtra="2dp"/>

    </com.kdt.DefocusableScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
